<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#0A0A0A"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-condensed-medium"

                android:padding="16dp"
                android:text="@string/man_united"
                android:textColor="#D32F2F"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/goalScoredA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0a"
                android:textColor="#00796B"
                android:textSize="56sp" />


            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:layout_margin="30dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:onClick="goalA"
                android:text="@string/goal" />

            <TextView
                android:id="@+id/shotTakenA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0"
                android:textColor="#00796B"
                android:textSize="36sp" />


            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"

                android:fontFamily="sans-serif-condensed-medium"
                android:onClick="shotA"
                android:text="@string/shot_on_target" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="16dp"

                android:text="@string/liverpool"
                android:textColor="#D32F2F"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/goalScoredB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0b"
                android:textColor="#00796B"

                android:textSize="56sp" />


            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"

                android:fontFamily="sans-serif-condensed-medium"
                android:onClick="goalB"
                android:text="@string/goal" />

            <TextView
                android:id="@+id/shotTakenB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:text="@string/_0c"
                android:textColor="#00796B"
                android:textSize="36sp" />


            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:onClick="shotB"
                android:text="@string/shot_on_target" />


        </LinearLayout>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:onClick="resetBtn"
        android:text="@string/reset" />


    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="150dp"
        android:background="#D32F2F" />

</RelativeLayout>
